# snake_game

./: .gitignore  CMakeLists.txt  README.md  conanfile.txt
src/: Food.cpp  Food.hpp  Game.cpp  Game.hpp  Screen.cpp  Screen.hpp  Snake.cpp  Snake.hpp  helpers.cpp  helpers.hpp  main.cpp
